--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="welcomestring">welcome to android!</string>
+    <string name="start">Start</string>
+    <string name="choose">Choose from disk</string>
 </resources>
