--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="choose">Choose from disk</string>
     <string name="人">人</string>
     <string name="地点">地点</string>
+    <string name="取消">取消</string>
 </resources>
