--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="人">人</string>
     <string name="地点">地点</string>
     <string name="取消">取消</string>
+    <string name="entity_marking">Entity\nMarking</string>
 </resources>
