--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="version">ver 1.0</string>
     <string name="select_text">从手机选择文本</string>
     <string name="select_default">选择预置文本</string>
+    <string name="实体1">实体1</string>
+    <string name="实体2">实体2</string>
 </resources>
