--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="select_default">选择预置文本</string>
     <string name="实体1">实体1</string>
     <string name="实体2">实体2</string>
+    <string name="not_mentioned">尚未标注</string>
+    <string name="is_mentioned">已标注</string>
 </resources>
