简单的点触选择实体

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="select_default">选择预置文本</string>
     <string name="实体1">实体1</string>
     <string name="实体2">实体2</string>
+    <string name="确定">确定</string>
 </resources>
